1537:prevent clear icon from overlapping text

--- a/ui/client-react/src/components/fields/fields.scss
+++ b/ui/client-react/src/components/fields/fields.scss
@@ -187,22 +187,38 @@ textarea:focus, .is-focused:not(.is-open) > .Select-control {
 .inputDeleteIcon {
     position: relative;
     width: inherit;
+    display: flex;
+    border: 1px solid #c7c7c7;
+    border-radius: 2px;
 
-    input {
-        transition: padding 0.3s ease-in-out;
+    &.isFocused {
+        border: solid 1px #2544a7;
+        border-color: #2544a7;
+        border-radius: 2px;
+        box-shadow: 0 0 2px 1.5px rgba(54, 94, 191, 0.25);
+    }
+
+    input.input.textField {
+        height: 30px;
+        // need to remove the browser default styling on a focused input since the focus styling
+        // is on the parent class which contains both the input and the clearIcon
+        outline: none;
+        border: none;
+        box-shadow: none;
     }
 
     .clearIcon {
         display: none;
+        position: relative;
         background-color: transparent;
         color: $clearmini-normal-color;
         max-height: 16px;
         max-width: 16px;
         opacity: 0;
-        position: absolute;
-        right: -3px;
-        top: 50%;
-        transform: translateY(-50%) rotate(130deg);
+        right: -7px;
+        top: 7px;
+        margin-right: 4px;
+        transform: rotate(130deg);
         transition: opacity 0.2s linear, transform 0.3s ease-in-out, right 0.3s ease-in-out;
 
         &:hover {
@@ -228,8 +244,8 @@ textarea:focus, .is-focused:not(.is-open) > .Select-control {
 
             & + .clearIcon {
                 opacity: 1;
-                right: 4px;
-                transform: translateY(-50%) rotate(0deg);
+                right: 0;
+                transform: rotate(0deg);
             }
         }
     }
